--- a/docs/2022/0330GCE.md
+++ b/docs/2022/0330GCE.md
@@ -13,6 +13,6 @@ AWSはだいたいわかったので (いやEC2だけ、それもわかってな
 決済情報はいれてるはずなんですけどね。
 
 と、おもったら「billing account」ってのを新たに作らないといけないだけで、
-カード情報はおぼてたの出してきました ^^;;
+カード情報はGoogle先生がおぼえていらっしゃったのを出してきました ^^;;
 
 まあボチボチいきます ^^;
