--- a/docs/2022/0601zoom.md
+++ b/docs/2022/0601zoom.md
@@ -1,6 +1,7 @@
 # zoomイベント
 
+2022.6.1
 明日、zoomミーティング + 会場のイベントに続いて、zoomウェビナー + 会場のイベントがあるので、
 手持ちの機材を全部だしてきました。司会は他の人に任せたので、明日はzoomとミキサーの係かな... ^^;
 
-!(zoom機材)[zoom.png]
+![zoom機材](zoom.png)
