--- a/docs/2022/0613tv.md
+++ b/docs/2022/0613tv.md
@@ -20,7 +20,13 @@
 同じスペースに50インチぐらいがはいるみたい。テレビじゃなくてディスプレイでもいいんだが、
 HDMI x2 と DP x2 だったりして悩ましい。
 
-たぶんこれかな... ^^;
+家電量販店 (ケーズデンキ) に見に行ってきたんだけど、だいたいハイエンドが77インチで50万円、
+売りたいモデルは55〜65インチぐらいの有機ELのモデルで 20万円超、液晶モデルは安くて儲からないので、
+目立たないところに置いてある感じで、それも55インチ、50インチぐらいがメイン。
+液晶50インチで10〜15万円といったところか。
+
+買うのは、たぶんこれかな...いまのところ ^^; 我が家の家計的にテレビ
+(ほぼゲームのディスプレイとアニメを見るようとして利用) に20万円は高い ^^;;
 
 [東芝 50V型 液晶テレビ レグザ 50M540X 4Kチューナー内蔵 外付けHDD W録画対応 (2020年モデル)](https://www.amazon.co.jp/dp/B084TFSPCQ/)
 
