goodle webmaster tools and tv minor fix

--- a/docs/2022/0613tv.md
+++ b/docs/2022/0613tv.md
@@ -3,7 +3,7 @@
 2022.6.13<br />
 いまつかってるテレビが、パナソニックのTH-42PX70というやつでして。プラズマですね。42インチ。
 
-![TH-42PX70](TH-42PX70.png)
+![TH-42PX70](TH-42PX70.jpg)
 
 どうも2007年モデルらしい。もう15年か...
 
