--- a/docs/2022/0613tv.md
+++ b/docs/2022/0613tv.md
@@ -3,11 +3,11 @@
 2022.6.13<br />
 いまつかってるテレビが、パナソニックのTH-42PX70というやつでして。プラズマですね。42インチ。
 
-![TH-42PX70](TH-42PX70.jpg)
+![TH-42PX70](TH-42PX70.png)
 
 どうも2007年モデルらしい。もう15年か...
 
-![TH-42PX70-2007](TH-42PX70-2007.png)
+![TH-42PX70-2007](TH-42PX70-2007.jpg)
 
 別に特に不満ないんだけど、最近調子悪くなってきて、雷みたいなエフェクトがかかるんですよね。
 ゲーム中、雷がなってるのかとおもってたんですけど、どうもディスプレイが勝手にエフェクトを
