--- a/docs/2025/0831s55.md
+++ b/docs/2025/0831s55.md
@@ -8,7 +8,7 @@
 
 ![engine](engine.jpeg)
 
-車検取得前なので仮ナンバーでテスト走行したんですが、体感300馬力といったところか。カタログスペックは500馬力/6100rpm、700N・m/2750～4000rpmなんですが、ちょっと700N・m出ている感じはしない。400N・mぐらいかな。何かがおかしいと思われる。
+車検取得前なので仮ナンバーでテスト走行したんですが、体感300馬力といったところか。カタログスペックは500馬力/6100rpm、700N・m/2750～4000rpmなんですが、ちょっと700N・m出ている感じはしない。300〜400N・mぐらいかな。何かがおかしいと思われる。
 
 まあ、おいおい整備していきます ^^;
 
