--- a/docs/2025/1227tire.md
+++ b/docs/2025/1227tire.md
@@ -2,7 +2,11 @@
 
 2025.12.27<br />
 
-スタッドレスタイヤを入手しました。タイヤはナンカンのなんかっぽい。ホイールはAMG。
+鳥取は雪が降るんですよ...
+
+![snow](snow.jpeg)
+
+そこで(?)スタッドレスタイヤを入手しました。タイヤはナンカンのなんかっぽい。ホイールはAMG。
 
 ![wheel](wheel.jpeg)
 
