minor fix + tamatama

--- a/docs/2026/0220leak.md
+++ b/docs/2026/0220leak.md
@@ -6,4 +6,10 @@
 
 ヒエー ^^;; 動けなくなる前に工場に行けてよかった...
 
-リビルトを探してくれるそうです...(写真はありません ^^;)
+リビルトを探してくれるそうです...新品(30万円以上)の半額ぐらいらしいです。
+
+なおボンネットが開かないのは、前からグリルをぶち壊してラッチにアクセスするそうです ^^;
+
+今日は特に写真はありませんが、お友達からいただいた宮崎のキンカンを載せておきます ^^;
+
+![tamatama](tamatama.jpeg)
