add engine hood catcher pic

--- a/docs/2026/0220leak.md
+++ b/docs/2026/0220leak.md
@@ -9,7 +9,11 @@
 リビルトを探してくれるそうです...新品(30万円以上)の半額ぐらいらしいです。
 
 なおボンネットが開かないのは、前からグリルをぶち壊してラッチにアクセスするそうです ^^;
+ラッチというか、キャッチというか、ボンネットの留め具の位置はここです。
+写真は以前乗っていたW220 S320です。
 
-今日は特に写真はありませんが、お友達からいただいた宮崎のキンカンを載せておきます ^^;
+![engine-hood-catcher](engine-hood-catcher.jpeg)
+
+悪いことが起きているので、お清めのために、お友達からいただいた宮崎のキンカンを載せておきます ^^;
 
 ![tamatama](tamatama.jpeg)
